--- a/src/saar_website/templates/saar_website/partials/footer.html
+++ b/src/saar_website/templates/saar_website/partials/footer.html
@@ -20,7 +20,7 @@
                         </div>
                     </div>
 
-                    <div class="col-md-8 col-lg-8 col-xl-4">
+                    {% comment %} <div class="col-md-8 col-lg-8 col-xl-4">
                         <div class="footer-item d-flex flex-column">
                             <h4 class="mb-4 text-white">Nos produits</h4>
 
@@ -28,7 +28,7 @@
                             <a href="{% url 'produit_detail' slug=prod.slug %}"><i class="fas fa-angle-right me-2"></i>{{prod.titre}}</a>
                             {% endfor %}
                         </div>
-                    </div>
+                    </div> {% endcomment %}
 
                     <div class="col-md-8 col-lg-8 col-xl-4">
                         <div class="footer-item d-flex flex-column">
