--- a/src/saar_website/templates/saar_website/index.html
+++ b/src/saar_website/templates/saar_website/index.html
@@ -40,7 +40,7 @@
                                             <div class="blog-img-inner">
                                                 <img class="img-fluid w-100 rounded-top" src="{{produit.path.url}}" alt="{{produit.titre}}" loading="lazy">
                                                 <div class="blog-icon">
-                                                    <a href="{% url 'produit' numero=produit.pk %}" class="my-auto"><i class="fas fa-link fa-2x text-white"></i></a>
+                                                    <a href="{% url 'produit_detail' slug=produit.slug %}" class="my-auto"><i class="fas fa-link fa-2x text-white"></i></a>
                                                 </div>
                                             </div>
 
@@ -69,7 +69,7 @@
                                             <div class="blog-img-inner">
                                                 <img class="img-fluid w-100 rounded-top" src="{{produit.path.url}}" alt="{{produit.titre}}" loading="lazy">
                                                 <div class="blog-icon">
-                                                    <a href="{% url 'produit' numero=produit.pk %}" class="my-auto"><i class="fas fa-link fa-2x text-white"></i></a>
+                                                    <a href="{% url 'produit_detail' slug=produit.slug %}" class="my-auto"><i class="fas fa-link fa-2x text-white"></i></a>
                                                 </div>
                                             </div>
 
