--- a/src/saar_website/templates/saar_website/agences.html
+++ b/src/saar_website/templates/saar_website/agences.html
@@ -61,7 +61,7 @@
         <div class="container-fluid blog py-0 pb-5">
             <div class="container py-0">
                 <div class="mx-auto text-center mb-5" style="max-width: 900px;">
-                    <h5 class="section-title px-3">A L'INERIEUR</h5>
+                    <h5 class="section-title px-3">A L'INTERIEUR</h5>
                     <h4 class="mb-4">Nous disposons de {{nbre_agences_int}} agences à l'intérieur</h4>
                 </div>
                 <div class="row g-4 justify-content-left">
@@ -98,7 +98,7 @@
 
 
         <!-- Blog Start -->
-        {% comment %} <div class="container-fluid blog py-5">
+        <div class="container-fluid blog py-5">
             <div class="container py-5">
                 <div class="mx-auto text-center mb-5" style="max-width: 900px;">
                     <h5 class="section-title px-3">NOS AGENTS GENERAUX</h5>
@@ -109,7 +109,7 @@
                       <tr class="bg-primary" style="color: white; font-size: calc(1rem + 0.3vw);">
                         <th scope="col">DESIGNATION</th>
                         <th scope="col">LOCALITE</th>
-                        <th scope="col">ADRESSES</th>
+                        <th scope="col">CONTACTS</th>
                       </tr>
                     </thead>
                     <tbody>
@@ -126,7 +126,7 @@
                   </table>
 
             </div>
-        </div> {% endcomment %}
+        </div> 
 
 
 
