--- a/src/saar_website/templates/saar_website/partials/footer.html
+++ b/src/saar_website/templates/saar_website/partials/footer.html
@@ -40,7 +40,7 @@
                             <a href="{% url 'valeurs' %}"><i class="fas fa-angle-right me-2"></i> Nos Valeurs </a>
                             <a href="https://sinistres.saarassurancesci.com/"><i class="fas fa-angle-right me-2"></i> Déclarer un sinistre </a>
                             <a href="{% url 'carousel_chatbot' %}"><i class="fas fa-angle-right me-2"></i> SAARCI Assistant</a>
-                            <a href="#"><i class="fas fa-angle-right me-2"></i> Carrières</a>
+                            {% comment %} <a href="#"><i class="fas fa-angle-right me-2"></i> Carrières</a> {% endcomment %}
                         </div>
                     </div>
                    
