--- a/src/saar_website/templates/saar_website/produits/produit-9.html
+++ b/src/saar_website/templates/saar_website/produits/produit-9.html
@@ -77,7 +77,7 @@
             <h2 class="text-danger fw-bold mb-3">Que faire en cas de sinistre ?</h2>
             <p class="fs-5">
                 Contactez immédiatement la compagnie par un des numéros suivants : 
-                <strong>(+225) 07 11 25 29 01, 07 47 84 08 97, 07 11 25 28 61</strong>.
+                <strong>(+225) 27 22 50 81 50</strong>.
             </p>
         </div>
     </div>
